fix: CheckStyle per MaterialeService