@@ -5,15 +5,14 @@ import com.is.mindart.gestioneMateriale.model.Materiale;
 import com.is.mindart.gestioneMateriale.model.MaterialeRepository;
 import com.is.mindart.gestioneSessione.model.Sessione;
 import com.is.mindart.gestioneSessione.model.SessioneRepository;
+import com.is.mindart.gestioneTerapeuta.model.Terapeuta;
 import com.is.mindart.gestioneTerapeuta.model.TerapeutaRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-import java.io.File;
 
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -30,7 +29,7 @@ import java.util.stream.Collectors;
  * i materiali associati ai terapeuti.
  */
 @Service
-public class MaterialeService {
+public final class MaterialeService {
 
     /**
      * Repository relativa al materiale.
@@ -48,6 +47,11 @@ public class MaterialeService {
     private final MaterialeMapper materialeMapperInjected;
 
     /**
+     * Repository relativa alle sessioni.
+     */
+    private final SessioneRepository sessioneRepositoryInjected;
+
+    /**
      * Directory di base dove salvare i file.
      */
     private static final String BASE_DIRECTORY = "src/materiali/";
@@ -58,29 +62,26 @@ public class MaterialeService {
     private final Logger logger = Logger.getLogger(
             MaterialeService.class.getName()
     );
-    private final SessioneRepository sessioneRepository;
 
     /**
      * Costruttore principale per l'iniezione delle dipendenze.
      *
-     * @param paramMaterialeRepository  Repository per gestire
-     *                                  l'entità Materiale
-     * @param paramMaterialeMapper      Mapper per convertire tra
-     *                                  entità e DTO
-     * @param paramTerapeutaRepository  Repository per gestire
-     *                                  l'entità Terapeuta
+     * @param materialeRepository  Repository per gestire l'entità Materiale
+     * @param materialeMapper      Mapper per convertire tra entità e DTO
+     * @param terapeutaRepository  Repository per gestire l'entità Terapeuta
+     * @param sessioneRepository   Repository per gestire l'entità Sessione
      */
     @Autowired
     public MaterialeService(
-            final MaterialeRepository paramMaterialeRepository,
-            final MaterialeMapper paramMaterialeMapper,
-            final TerapeutaRepository paramTerapeutaRepository,
-            SessioneRepository sessioneRepository) {
-        // Assegniamo alle variabili di istanza per evitare campi nascosti
-        this.materialeRepositoryInjected = paramMaterialeRepository;
-        this.materialeMapperInjected = paramMaterialeMapper;
-        this.terapeutaRepositoryInjected = paramTerapeutaRepository;
-        this.sessioneRepository = sessioneRepository;
+            final MaterialeRepository materialeRepository,
+            final MaterialeMapper materialeMapper,
+            final TerapeutaRepository terapeutaRepository,
+            final SessioneRepository sessioneRepository
+    ) {
+        this.materialeRepositoryInjected = materialeRepository;
+        this.materialeMapperInjected = materialeMapper;
+        this.terapeutaRepositoryInjected = terapeutaRepository;
+        this.sessioneRepositoryInjected = sessioneRepository;
     }
 
     /**
@@ -90,9 +91,7 @@ public class MaterialeService {
      * @param terapeutaId ID del terapeuta loggato
      * @return Lista di {@link OutputMaterialeDTO}
      */
-    public List<OutputMaterialeDTO> getClientMateriali(
-            final long terapeutaId
-    ) {
+    public List<OutputMaterialeDTO> getClientMateriali(final long terapeutaId) {
         return this.materialeRepositoryInjected
                 .findByTerapeutaId(terapeutaId)
                 .stream()
@@ -107,19 +106,17 @@ public class MaterialeService {
      * @param inputMaterialeDTO DTO contenente i dati del materiale
      * @return true se il materiale esiste già, false altrimenti
      */
-    public boolean existsMateriale(
-            final InputMaterialeDTO inputMaterialeDTO
-    ) {
+    public boolean existsMateriale(final InputMaterialeDTO inputMaterialeDTO) {
+        Terapeuta terapeuta = this.terapeutaRepositoryInjected.findById(
+                inputMaterialeDTO.getTerapeutaId()
+        ).orElseThrow(
+                () -> new EntityNotFoundException("Terapeuta non trovato")
+        );
+
         return this.materialeRepositoryInjected.existsByNomeAndTipoAndTerapeuta(
                 inputMaterialeDTO.getNome(),
                 inputMaterialeDTO.getTipoMateriale(),
-                this.terapeutaRepositoryInjected.findById(
-                        inputMaterialeDTO.getTerapeutaId()
-                ).orElseThrow(
-                        () -> new EntityNotFoundException(
-                                "Terapeuta non trovato"
-                        )
-                )
+                terapeuta
         );
     }
 
@@ -131,8 +128,7 @@ public class MaterialeService {
      * @return {@link OutputMaterialeDTO} del materiale salvato
      */
     public OutputMaterialeDTO addMateriale(
-            final InputMaterialeDTO materialeDTO
-    ) {
+            final InputMaterialeDTO materialeDTO) {
         // Percorso della cartella basato sul terapeutaId
         Path directoryPath = Paths.get(
                 BASE_DIRECTORY,
@@ -149,6 +145,8 @@ public class MaterialeService {
                         "Errore nella creazione della directory: {0}",
                         e.getMessage()
                 );
+                throw new RuntimeException(
+                        "Errore nella creazione della directory", e);
             }
         }
 
@@ -161,9 +159,11 @@ public class MaterialeService {
         } catch (IOException e) {
             this.logger.log(
                     Level.SEVERE,
-                    "Errore durante la scrittura del file : {0}",
+                    "Errore durante la scrittura del file: {0}",
                     e.getMessage()
             );
+            throw new RuntimeException(
+                    "Errore durante la scrittura del file", e);
         }
 
         // Converte il DTO in entità e salva nel database
@@ -178,17 +178,21 @@ public class MaterialeService {
         return this.materialeMapperInjected.toDTO(materiale);
     }
 
-    public ByteArrayResource getByteArray(final String path) throws IOException {
+    /**
+     * Recupera il contenuto di un file come ByteArrayResource.
+     *
+     * @param path percorso del file
+     * @return {@link ByteArrayResource} contenente i byte del file
+     * @throws IOException se si verifica un errore durante la lettura del file
+     */
+    public ByteArrayResource getByteArray(
+            final String path) throws IOException {
         // Creazione del file dal percorso
-        File file = new File(path);
-        // Lettura del contenuto del file
-        FileInputStream fis = new FileInputStream(file);
-        byte[] fileBytes = fis.readAllBytes();
-        fis.close();
+        Path filePath = Paths.get(path);
+        byte[] fileBytes = Files.readAllBytes(filePath);
         // Converte il file in una risorsa
         return new ByteArrayResource(fileBytes);
     }
-
 
     /**
      * Rimuove un materiale cancellando il file dal filesystem
@@ -197,10 +201,9 @@ public class MaterialeService {
      * @param id id del materiale da rimuovere
      */
     public void removeMaterial(final long id) {
-        // Percorso della cartella basato sul terapeutaId
-
         Materiale materiale = materialeRepositoryInjected.findById(id)
-                .orElseThrow();
+                .orElseThrow(() -> new EntityNotFoundException(
+                        "Materiale non trovato"));
 
         Path filePath = Path.of(materiale.getPath());
         try {
@@ -215,9 +218,11 @@ public class MaterialeService {
         } catch (IOException e) {
             this.logger.log(
                     Level.SEVERE,
-                    "Errore durante la cancellazione del file : {0}",
+                    "Errore durante la cancellazione del file: {0}",
                     e.getMessage()
             );
+            throw new RuntimeException(
+                    "Errore durante la cancellazione del file", e);
         }
 
         // Elimina il record dal database
@@ -270,6 +275,8 @@ public class MaterialeService {
                                 "Errore durante l'aggiornamento del file: {0}",
                                 e.getMessage()
                         );
+                        throw new RuntimeException(
+                                "Errore durante l'aggiornamento del file", e);
                     }
                 });
     }
@@ -279,18 +286,21 @@ public class MaterialeService {
      *
      * @param codice codice del bambino associato alla sessione.
      * @return MaterialeDTO contenente i dettagli del materiale.
-     * @throws EntityNotFoundException se la sessione o il materiale non esistono.
+     * @throws EntityNotFoundException se la sessione
+     * o il materiale non esistono.
      */
     public MaterialeDTOResponse getMaterialeByCodice(final String codice) {
-        Sessione sessione = sessioneRepository
+        Sessione sessione = sessioneRepositoryInjected
                 .findByTerminataFalseAndBambini_CodiceOrderByDataAsc(codice)
                 .stream()
                 .findFirst()
-                .orElseThrow(() -> new EntityNotFoundException("Sessione non trovata"));
+                .orElseThrow(()
+                        -> new EntityNotFoundException("Sessione non trovata"));
 
         Materiale materiale = sessione.getMateriale();
         if (materiale == null) {
-            throw new EntityNotFoundException("Materiale associato alla sessione non trovato");
+            throw new EntityNotFoundException(
+                    "Materiale associato alla sessione non trovato");
         }
 
         // Legge il contenuto del file
@@ -298,10 +308,11 @@ public class MaterialeService {
         try {
             fileBytes = getByteArray(materiale.getPath()).getByteArray();
         } catch (IOException e) {
-            throw new RuntimeException("Errore nella lettura del file: " + e.getMessage());
+            throw new RuntimeException(
+                    "Errore nella lettura del file: " + e.getMessage(), e);
         }
 
-        // Mappa l'entità Materiale a MaterialeDTO
+        // Mappa l'entità Materiale a MaterialeDTOResponse
         return new MaterialeDTOResponse(
                 materiale.getId(),
                 materiale.getNome(),
@@ -315,18 +326,21 @@ public class MaterialeService {
      *
      * @param email email del terapeuta associato alla sessione.
      * @return MaterialeDTO contenente i dettagli del materiale.
-     * @throws EntityNotFoundException se la sessione o il materiale non esistono.
+     * @throws EntityNotFoundException se la sessione
+     * o il materiale non esistono.
      */
     public MaterialeDTOResponse getMaterialeByEmail(final String email) {
-        Sessione sessione = sessioneRepository
+        Sessione sessione = sessioneRepositoryInjected
                 .findByTerminataFalseAndTerapeuta_EmailOrderByDataAsc(email)
                 .stream()
                 .findFirst()
-                .orElseThrow(() -> new EntityNotFoundException("Sessione non trovata"));
+                .orElseThrow(()
+                        -> new EntityNotFoundException("Sessione non trovata"));
 
         Materiale materiale = sessione.getMateriale();
         if (materiale == null) {
-            throw new EntityNotFoundException("Materiale associato alla sessione non trovato");
+            throw new EntityNotFoundException(
+                    "Materiale associato alla sessione non trovato");
         }
 
         // Legge il contenuto del file
@@ -334,10 +348,11 @@ public class MaterialeService {
         try {
             fileBytes = getByteArray(materiale.getPath()).getByteArray();
         } catch (IOException e) {
-            throw new RuntimeException("Errore nella lettura del file: " + e.getMessage());
+            throw new RuntimeException("Errore nella lettura del file: "
+                    + e.getMessage(), e);
         }
 
-        // Mappa l'entità Materiale a MaterialeDTO
+        // Mappa l'entità Materiale a MaterialeDTOResponse
         return new MaterialeDTOResponse(
                 materiale.getId(),
                 materiale.getNome(),
